added ranking and userlist endpoints
